--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
 
         <div class="about-content">
             <h2 class="heading">About <span>Me</span></h2>
-            <p>A hardworking and passionate first-year computer science student eager to learn and improve in the field of programming. He has already established a good foundation in a variety of programming languages and technologies, showcasing his commitment to software engineering, full-stack development, and application development. This person is a motivated and eager computer science student that is always looking for new challenges to help them enhance their abilities and knowledge. They have the potential to make a huge influence in the field of computer science and have a bright future ahead of them because of their skill and determination. Their drive to learn and improve makes them an important member of any team.</p>
+            <p>As a dedicated first-year computer science student, I am proud of the strong foundation I have established in various programming languages and technologies. My commitment to software engineering, full-stack development, and application development has driven me to pursue challenging projects and continuously seek out new opportunities to enhance my skills. For instance, I have recently completed a project where I developed a web application that streamlined the data entry process for a non-profit organization. This experience helped me to develop my skills in front-end and back-end development, as well as project management and teamwork. Moving forward, I plan to continue honing my skills in software engineering and explore new technologies to stay up-to-date with the latest trends in the field. Ultimately, my goal is to use my skills and passion to make a meaningful 
+                impact in the computer science industry and contribute to the development of innovative solutions to real-world problems.</p>
             <a href="#portfolio" class="btn">Portfolio</a>
         </div>
     </section>
